clusters/homelab/apps/joplin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: joplin
  namespace: joplin
spec:
  type: ClusterIP
  selector:
    app: joplin
  ports:
    - name: http
      port: 80
      targetPort: 22300
